# cuda_practice

./: CMakeLists.txt  blob.cuh  kernel.cuh  main.cu  utils.cuh
